tello-mjpeg-streamer/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app: tello-mjpeg-streamer
  labels:
    app: tello-mjpeg-streamer
  name: tello-mjpeg-streamer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tello-mjpeg-streamer
  strategy: {}
  template:
    metadata:
      annotations:
        app: tello-mjpeg-streamer
        version: v1.0
      labels:
        app: tello-mjpeg-streamer
        version: v1
    spec:
      containers:
      - image: quay.io/yono/tello-mjpeg-streamer:1.0
        imagePullPolicy: IfNotPresent
        name: flask-server
        ports:
        - containerPort: 5000
          protocol: TCP
        - containerPort: 11111
          protocol: UDP
        - containerPort: 8889
          protocol: UDP
        securityContext:
          privileged: true
      hostNetwork: true
      restartPolicy: Always
      serviceAccount: tello-mjpeg-streamer
      serviceAccountName: tello-mjpeg-streamer
