tello-mjpeg-streamer/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tello-mjpeg-streamer
  labels:
    app: tello-mjpeg-streamer
spec:
  to:
    kind: Service
    name: tello-mjpeg-streamer-web
    weight: 100
  port:
    targetPort: 5000
  wildcardPolicy: None
